<resources>
    <string name="app_name">DeKit</string>

    <string name="dummy_text">Dummy Text 2</string>
    <string name="load_image">Load Photo</string>
    <string name="capture_image">Take a Photo</string>
    <string name="result">Result:  </string>
    <string name="click_to_search">Click on Result to search image on Google</string>
    <string name="default_image">default image</string>
    <string name="save">Save</string>
    <string name="birds">Birds</string>
    <string name="add">Add</string>
    <string name="plants">Plants</string>

</resources>