<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBird"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/search_bird" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imageBird">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoadPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/load_image"
            android:background="@color/blue"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTakePhoto"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:text="@string/capture_image"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_button"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:padding="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_search_google"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/click_to_search"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@color/orange"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>