<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.dekit.ui.main.MainActivity">

    <ImageView
        android:id="@+id/imageBird"
        android:layout_width="@dimen/dp300"
        android:layout_height="@dimen/dp350"
        android:layout_centerHorizontal="true"
        android:src="@drawable/search_bird" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageBird"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoadPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/load_image"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/capture_image"
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_button"
        android:layout_margin="@dimen/dp10"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp10"
                android:textColor="@color/green"
                android:textSize="@dimen/sp20" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_search_google"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/click_to_search"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp30"
        android:background="@color/orange"
        android:paddingStart="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingEnd="@dimen/dp40"
        android:paddingBottom="@dimen/dp10"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:visibility="gone" />

</RelativeLayout>